If ImageLoader's loadEventSender or errorEventSender fires after document is detached, the document will be leaked.

https://bugs.webkit.org/show_bug.cgi?id=106394

Patch by Yongjun Zhang <yongjun_zhang@apple.com> on 2013-01-09
Reviewed by Alexey Proskuryakov.

ImageLoader's loadEventSender and errorEventSender schedule event dispatching in separate timers and refs
the Element in updatedHasPendingEvent.  If the Document is detached before either eventSender dispatches,
we would leak the Document since we bail out early in dispatchPendingLoadEvent or dispatchPendingErrorEvent,
without deref-ing the Element itself.

No new tests.  Verified manually by using heap tool to count the living HTMLDocuments.

* loader/ImageLoader.cpp:
(WebCore::ImageLoader::dispatchPendingLoadEvent): also call updatedHasPendingEvent to deref the Element if
            the document is detached.
(WebCore::ImageLoader::dispatchPendingErrorEvent): ditto.

Canonical link: https://commits.webkit.org/124658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139209 268f45cc-cd09-0410-ab3c-d52691b4dbfc